--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@coinbase/onchainkit": "^0.24.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "resend": "^3.4.0",
+    "rsend": "^2.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
